// Copyright 2018 The OpenPitrix Authors. All rights reserved.
// Use of this source code is governed by a Apache license
// that can be found in the LICENSE file.

syntax = "proto3";

package openpitrix.iam;

option go_package = "openpitrix.io/iam/openpitrix/pkg/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "filter.proto";

// ----------------------------------------------------------------------------
// The Pattern Syntax
// ----------------------------------------------------------------------------

// The pattern syntax is:
//
//	pattern:
//	{ term }
//	term:
//		'*'         matches any sequence of non-Separator characters
//		'**'        matches any sequence of characters, include path separators.
//		'?'         matches any single non-Separator character
//		'[' [ '^' ] { character-range } ']'
//		            character class (must be non-empty)
//		c           matches character c (c != '*', '?', '\\', '[')
//		'\\' c      matches character c
//
//	character-range:
//		c           matches character c (c != '\\', '-', ']')
//		'\\' c      matches character c
//		lo '-' hi   matches character c for lo <= c <= hi
//
// See https://godoc.org/path/filepath#Match
// See https://github.com/bmatcuk/doublestar
//
// Examples: https://golang.org/src/path/filepath/match_test.go

// ----------------------------------------------------------------------------
// basic type
// ----------------------------------------------------------------------------

message Group {
	string gid = 1;
	string name = 2;

	string path = 3;
	string path_name = 4;

	string email = 5;
	string description = 6;

	string status = 7;

	google.protobuf.Timestamp create_time = 8;
	google.protobuf.Timestamp update_time = 9;
	google.protobuf.Timestamp status_time = 10;
}

message User {
	string uid = 1;
	string gid = 2;
	string role_id = 3;
	string resource_namespace = 4;

	string name = 5;
	string email = 6;
	string description = 7;
	string password = 8;
	string status = 9;
	string office = 10;

	google.protobuf.Timestamp create_time = 11;
	google.protobuf.Timestamp update_time = 12;
	google.protobuf.Timestamp status_time = 13;
}
message UserPassword {
	string uid = 1;
	string password = 2;
}

message Role {
	string id = 1;
	string name = 2;
	repeated string rule_id = 3;
}

message ActionRule {
	string id = 1;
	string name = 2;

	string method_pattern = 3;             // See Pattern Syntax
	repeated string namespace_pattern = 4; // See Pattern Syntax
}

message Action {
	string uid = 1;       // uid_1234
	string method = 2;    // GRPC: ServiceName.ServiceMethodName
	string namespace = 3; // qingcloud.test
}

// ----------------------------------------------------------------------------
// service api
// ----------------------------------------------------------------------------

// For ModifyXXX
// if message.field is spacestring, set it empty string value.
// if message.field is empty string, ignore it.
//
// https://github.com/chai2010/spacestring

// Identity and Access Management System for OpenPitrix.
service IAMManager {
	rpc CreateGroup(Group) returns (Group) {
		option (google.api.http) = {
			post: "/api/IAMManager.CreateGroup"
		};
	}
	rpc DeleteGroups(IdList) returns (Bool) {
		option (google.api.http) = {
			delete: "/api/IAMManager.DeleteGroups"
		};
	}
	rpc ModifyGroup(Group) returns (Group) {
		option (google.api.http) = {
			patch: "/api/IAMManager.ModifyGroup"
		};
	}
	rpc DescribeGroups(Range) returns (GroupList) {
		option (google.api.http) = {
			get: "/api/IAMManager.DescribeGroups/{namespace=**}"
		};
	}
	rpc GetGroup(Id) returns (Group) {
		option (google.api.http) = {
			get: "/api/IAMManager.GetGroup/{id}"
		};
	}

	rpc CreateUser(User) returns (User) {
		option (google.api.http) = {
			post: "/api/IAMManager.CreateUser"
		};
	}
	rpc DeleteUsers(IdList) returns (Bool) {
		option (google.api.http) = {
			delete: "/api/IAMManager.DeleteUsers"
		};
	}
	rpc ModifyUser(User) returns (User) {
		option (google.api.http) = {
			patch: "/api/IAMManager.ModifyUser"
		};
	}
	rpc DescribeUsers(Range) returns (UserList) {
		option (google.api.http) = {
			get: "/api/IAMManager.DescribeUsers/{namespace=**}"
		};
	}
	rpc GetUser(Id) returns (User) {
		option (google.api.http) = {
			get: "/api/IAMManager.GetUser/{id}"
		};
	}

	rpc CreateRole(Role) returns (Role) {
		option (google.api.http) = {
			post: "/api/IAMManager.CreateRole"
		};
	}
	rpc DeleteRole(IdList) returns (Bool) {
		option (google.api.http) = {
			delete: "/api/IAMManager.DeleteRole"
		};
	}
	rpc ModifyRole(Role) returns (Role) {
		option (google.api.http) = {
			patch: "/api/IAMManager.ModifyRole"
		};
	}
	rpc DescribeRoles(Range) returns (RoleList) {
		option (google.api.http) = {
			get: "/api/IAMManager.DescribeRoles/{namespace=**}"
		};
	}
	rpc GetRole(Id) returns (Role) {
		option (google.api.http) = {
			get: "/api/IAMManager.GetRole/{id}"
		};
	}

	rpc CreateActionRule(ActionRule) returns (ActionRule) {
		option (google.api.http) = {
			post: "/api/IAMManager.CreateActionRule"
		};
	}
	rpc DeleteActionRule(IdList) returns (Bool) {
		option (google.api.http) = {
			delete: "/api/IAMManager.DeleteActionRule"
		};
	}
	rpc ModifyActionRule(ActionRule) returns (ActionRule) {
		option (google.api.http) = {
			patch: "/api/IAMManager.ModifyActionRule"
		};
	}
	rpc DescribeActionRules(Range) returns (ActionRuleList) {
		option (google.api.http) = {
			get: "/api/IAMManager.DescribeActionRules/{namespace=**}"
		};
	}
	rpc GetActionRule(Id) returns (ActionRule) {
		option (google.api.http) = {
			get: "/api/IAMManager.GetActionRule/{id}"
		};
	}

	rpc ComparePassword(UserPassword) returns (Bool) {
		option (google.api.http) = {
			post: "/api/IAMManager.ComparePassword"
		};
	}
	rpc ModifyPassword(UserPassword) returns (Bool) {
		option (google.api.http) = {
			post: "/api/IAMManager.ModifyPassword"
		};
	}

	// check any of xid or role_name can do the action
	rpc CanDo(Action) returns (Bool) {
		option (google.api.http) = {
			get: "/api/IAMManager.CanDo/{uid}/{method}/{namespace=**}"
		};
	}
}

// ----------------------------------------------------------------------------
// service api type
// ----------------------------------------------------------------------------

message Bool {
	bool value = 1;
}

message Id {
	string id = 1;
}

message IdList {
	int32 total = 1;
	int32 offset = 2;
	repeated Id value = 3;
}
message GroupList {
	int32 total = 1;
	int32 offset = 2;
	repeated Group value = 3;
}
message UserList {
	int32 total = 1;
	int32 offset = 2;
	repeated User value = 3;
}
message RoleList {
	int32 total = 1;
	int32 offset = 2;
	repeated Role value = 3;
}
message ActionRuleList {
	int32 total = 1;
	int32 offset = 2;
	repeated ActionRule value = 3;
}

message Range {
	string namespace = 1;
	map<string,FieldValidator> filter = 2;

	int32 offset = 3;
	int32 limit = 4;
}

// ----------------------------------------------------------------------------
// END
// ----------------------------------------------------------------------------
